--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,15 +1,12 @@
 short_open_tag = On
-display_errors = On
+display_errors = Off
 error_log = "/var/log/php/error.log"
-error_reporting = E_ALL
+error_reporting = E_ALL & ~E_NOTICE
 log_errors = On
 upload_max_filesize = 128M
 post_max_size = 128M
 max_input_vars = 10000
 mbstring.internal_encoding = "UTF-8"
 mbstring.func_overload = 2
-date.timezone = "Europe/Moscow"
+date.timezone = "Asia/Baku"
 memory_limit = 512M
-
-[mail]
-sendmail_path = /usr/bin/mhsendmail --smtp-addr mailhog:1025
