--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,7 +1,8 @@
 [mysqld]
 sql_mode=
-default_time_zone="+04:00"
-innodb_flush_method     	= O_DIRECT
+default_time_zone = "+00:00"
+innodb_flush_method = O_DIRECT
 innodb_flush_log_at_trx_commit = 2
 transaction-isolation = READ-COMMITTED
-innodb_buffer_pool_size = 56M
+innodb_buffer_pool_size = 2G
+innodb_log_file_size = 256M
