--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,12 +1,17 @@
 short_open_tag = On
 display_errors = Off
 error_log = "/var/log/php/error.log"
-error_reporting = E_ALL & ~E_NOTICE
+error_reporting = E_ALL ^ E_DEPRECATED
 log_errors = On
 upload_max_filesize = 128M
 post_max_size = 128M
 max_input_vars = 10000
 mbstring.internal_encoding = "UTF-8"
 mbstring.func_overload = 2
-date.timezone = "Asia/Baku"
-memory_limit = 512M
+date.timezone = "UTC"
+memory_limit = 2G
+session.use_trans_sid = off
+enable_dl = Off
+pcre.backtrack_limit = 1000000
+pcre.recursion_limit = 14000
+realpath_cache_size = 8192k
